# End-to-End-Agentic-AI-Workflow-for-QA-Automation-Testing-with-Playwright-MCP

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  package.json  pyproject.toml  pytest_help.txt  requirements.txt
.github/workflows/: python-playwright.yml
agents/: browser.agent.md  execution.agent.md  generator.agent.md  healer.agent.md  planner.agent.md  reporter.agent.md
docs/: architecture.md
fixtures/: conftest.py
observations/: exploratory.md
pages/: cart_page.py  checkout_complete_page.py  checkout_overview_page.py  checkout_page.py  inventory_page.py  login_page.py
plans/: test_plan.md
reports/: SCRUM-101-final-report.md  report.html
tests/: test_cart.py  test_checkout_information.py  test_checkout_overview.py  test_login.py  test_order_completion.py  test_validation.py
utils/: config.py  constants.py
